2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.Metadata : revert opaquing of TextIter.
	* gtk/TextBuffer.custom : ditto
	* gtk/gtk-api.xml : regen

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* generator/MethodBody.cs : remove unnecessary generation for
	Handle using out parameters.
	* gtk/Gtk.Metadata : make TextIter opaque
	* gtk/TextBuffer.custom : remove redundant dllimport
	* gtk/gtk-api.xml : regen

2004-01-27  Mike Kestner  <mkestner@ximian.com>

	* gnome/Gnome.metadata : Icon.LookupSync mark factory param
	null_ok.  Reworked from patch by Todd Berman.
	* gnome/gnome-api.xml : regen

2004-01-25  Mike Kestner  <mkestner@ximian.com>

	* art/art-api.xml : regen
	* gdk/gdk-api.xml : regen
	* generator/SymbolTable.cs : add unsigned char mapping
	* gnome/gnome-api.xml : regen
	* parser/gapi2xml.pl : handle unsigned keyword in fields,
	typedefs, and parameter types.
	[Fixes #53055]

2004-01-25  Mike Kestner  <mkestner@ximian.com>

	* gdk/gdk-api.xml : regen
	* gnome/gnome-api.xml : regen
	* gtk/gtk-api.xml : regen
	* parser/gapi2xml.pl : handle typedef struct {...} Foo;
	[Fixes #53312]

2004-01-22  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* generator/Ctor.cs: Warnings was output like "ctor" fixed to
	output like "in ctor", like the rest of the warnings.

2004-01-21  John Luke  <jluke@cfl.rr.com>
	
	* vte/Makefile.in: fix so you can build from scratch

2004-01-21  Mike Kestner  <mkestner@ximian.com>

	* generator/Field.cs : kill Protection, restructure Generate
	and add FIXMEs for broken parts. Add StudlyName and move array
	fields to use Studly names.

2004-01-20  John Luke  <jluke@cfl.rr.com>

	* samples/GtkDemo:
	* samples/DbCLient: compile fixes, patch from
	Paul Duran <pauld@hutch.com.au>

2004-01-20  John D. Hardin <jhardin@impsec.org>

	* glue/type.c : ansi-c-ify some late var decls.

2004-01-19  John Luke  <jluke@cfl.rr.com>

	* vte/Makefile.in: fix it so you can build without having
	gtk# already installed
