@@ -1,5 +1,11 @@
 2004-01-27  Mike Kestner  <mkestner@ximian.com>
 
+	* generator/BoxedGen.cs : gen a Value to Boxed explicit cast op.
+	* generator/Property.cs : use new cast in Boxed getters.
+	[Fixes #53414]
+
+2004-01-27  Mike Kestner  <mkestner@ximian.com>
+
 	* gtk/Gtk.Metadata : revert opaquing of TextIter.
 	* gtk/TextBuffer.custom : ditto
 	* gtk/gtk-api.xml : regen
